[PORTOFOLIO-WEB]Add Portofolio Details

--- a/index.html
+++ b/index.html
@@ -307,223 +307,20 @@
       </div>
 
       <div id="myBtnContainer" class="text-center mt-4">
-        <button class="filter-item" data-filter="all">All</button>
+        <button class="filter-item active" data-filter="all">All</button>
         <button class="filter-item" data-filter="game">Game</button>
         <button class="filter-item" data-filter="webapp">Web App</button>
         <button class="filter-item" data-filter="website">Website</button>
         <button class="filter-item" data-filter="apps">Mobile Apps</button>
       </div>
       <div class="portfolio-body">
-        <div class="row justify-content-evenly px-4 mb-4">
-          <div
-            class="post col-md-4 game all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/tic_tac_toe.png"
-                class="card-img-top"
-                alt="tic-tac-toe-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Tic Tac Toe Game</h4>
-                <span class="badge bg-secondary badge-pill">HTML&CSS</span>
-                <span class="badge bg-secondary badge-pill">JavaScript</span>
-                <span class="badge bg-secondary badge-pill mb-2">Game</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 webapp all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/todo-list.png"
-                class="card-img-top"
-                alt="todo-list-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Todo List simple</h4>
-                <span class="badge bg-secondary badge-pill">NextJS</span>
-                <span class="badge bg-secondary badge-pill">JavaScript</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Web App</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 webapp all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/sbi-omfs-web-app.png"
-                class="card-img-top"
-                alt="sbi-omfs-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">SBI OMFS</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill"
-                  >JavaScript / TypeScript</span
-                >
-                <span class="badge bg-secondary badge-pill">AWS S3</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Web App</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-evenly px-4 mb-4">
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/sbi-admin.png"
-                class="card-img-top"
-                alt="sbi-admin" />
-              <div class="card-body text-center">
-                <h4 class="card-title">SBI OMFS Admin Panel</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill"
-                  >JavaScript / TypeScript</span
-                >
-                <span class="badge bg-secondary badge-pill">AWS S3</span
-                ><span class="badge bg-secondary badge-pill" style="margin: 4px"
-                  >ChartJS</span
-                >
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/compre-drkai.png"
-                class="card-img-top"
-                alt="company-profile-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Company Profile Dr Kai Lee</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill"
-                  >JavaScript / TypeScript</span
-                >
-                <span class="badge bg-secondary badge-pill">AWS S3</span>
-                <span class="badge bg-secondary badge-pill">AWS Lambda</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/admin-compre.png"
-                class="card-img-top"
-                alt="admin-panel-web-company-profile-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Admin Panel Company Profile Dr Kai</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill"
-                  >JavaScript / TypeScript</span
-                >
-                <span class="badge bg-secondary badge-pill">AWS S3</span>
-                <span class="badge bg-secondary badge-pill">AWS Lambda</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill">SCSS/SASS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row justify-content-evenly px-4 mb-4">
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/check-grammar.png"
-                class="card-img-top"
-                alt="check-grammar-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Check Tense / Check Grammar</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill">TypeScript</span>
-                <span class="badge bg-secondary badge-pill">Open AI Api</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/skuynime.png"
-                class="card-img-top"
-                alt="company-profile-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">Comic List</h4>
-                <span class="badge bg-secondary badge-pill">ReactJS</span>
-                <span class="badge bg-secondary badge-pill">TypeScript</span>
-                <span class="badge bg-secondary badge-pill">HTML</span>
-                <span class="badge bg-secondary badge-pill">graphql</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="post col-md-4 website all col-10 mt-3 mt-md-0"
-            data-aos="fade-up">
-            <div class="card">
-              <img
-                src="images/tutureels.png"
-                class="card-img-top"
-                alt="tutureels-icon" />
-              <div class="card-body text-center">
-                <h4 class="card-title">CMS Admin Panel For Mobile Apps</h4>
-                <span class="badge bg-secondary badge-pill">NextJS</span>
-                <span class="badge bg-secondary badge-pill">TypeScript</span>
-                <span class="badge bg-secondary badge-pill">VPS</span>
-                <span class="badge bg-secondary badge-pill">NGINX</span>
-                <span class="badge bg-secondary badge-pill">SASS</span>
-                <span class="badge bg-secondary badge-pill">CSS</span>
-                <span class="badge bg-secondary badge-pill">Redux</span>
-                <span class="badge bg-secondary badge-pill"
-                  >React Context API</span
-                >
-                <span class="badge bg-secondary badge-pill">Monorepo</span>
-                <span class="badge bg-secondary badge-pill">turbo</span>
-                <span class="badge bg-secondary badge-pill">axios</span>
-                <span class="badge bg-secondary badge-pill">tailwindcss</span>
-                <span class="badge bg-secondary badge-pill mb-2">Website</span
-                ><br />
-                <a href="#" class="link">Read More</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div
+          class="row justify-content-evenly px-4 mb-4"
+          id="portofolio-contents"></div>
+        <div class="row justify-content-evenly px-4 mb-4"></div>
       </div>
     </section>
+
     <!-- contact section starts -->
     <section class="contact py-5" id="contact">
       <div class="heading text-center">
@@ -656,6 +453,21 @@
         duration: 1000,
         offset: 50,
       });
+      const contactSection = document.querySelector("#contact");
+
+      const observer = new IntersectionObserver(
+        ([entry]) => {
+          if (entry.isIntersecting) {
+            AOS.refresh(); // Refresh AOS animations
+          }
+        },
+        {
+          root: null,
+          threshold: 0.3,
+        }
+      );
+
+      observer.observe(contactSection);
     </script>
     <!-- custom js file linking -->
     <script src="js/script.js"></script>
